[package]
name = "database"
version = "0.1.0"
authors = ["Filip Skubacz <filip.skubacz00@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
diesel = { version = "1.3", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "1.3"
chrono = { version = "0.4.19", features = ["serde"] }
log = "0.4"
argon2 = "0.2.0"
rand_core = { version = "0.6", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
rocket = { version = "0.5.0-rc.1", features = ["tls", "json", "secrets"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = [
  "diesel_sqlite_pool"
] }
base64 = "0.13.0"
